kde4libs (4:4.0.1-2) UNRELEASED; urgency=low

  * Add versioned shlibs to libphonon4.
  * Remove kde-icons-oxygen and kdebase-runtime-data from the shlibs file of
    kdelibs5. kdebase-runtime depends on them anyway.

 -- Armin Berres <trigger+debian@space-based.de>  Tue, 05 Feb 2008 15:14:30 +0100

kde4libs (4:4.0.1-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Matthew Rosewarne:

  * Make dependencies binNMU-friendly.
  * Bump Soprano minimum version to 2.0.0.
  * Remove redundant Depends: shared-mime-info from kdelibs5-dev.
  * Add Suggests: kdelibs5-doc to kdelibs5-dev.

  +++ Changes by Armin Berres:

  * Update 10_kdehome_kde4 patch. Set kde home directory to ~/.kde4
    where ~/.kde was used. Thanks to Jonathan Riddell and Suse people.
  * Update installed files.
  * Drop no more needed patch 16_arm_fixes.diff.

  +++ Changes by Fathi Boudra:

  * Make kdelibs5-dev installable on GNU/kFreeBSD. Thanks to Aurelien Jarno.
    (Closes: #462338)
  * Add dbus-x11 dependency to kdelibs5. Thanks to Chris Desjardins.
  * Add Vcs-Browser and Vcs-Svn fields.
  * Cherry pick from branches/KDE/4.0:

    + 02_re-register_global_shortcuts_r769363:
      Re-register global shortcuts if kded4 is restarted.

  +++ Changes by Adeodato Simó:

  * Cherry pick from /branches/KDE/4.0:

    + 01_make_stackingOrder_work_r769072: fix KWindowSystem::stackingOrder() to
      actually return a non-empty list with the list of windows.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update to debhelper 6.
  * Add versioned b-d on cdbs (>= 0.4.51) to get debhelper 6 support and fixed
    cmake.mk class.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 04 Feb 2008 09:59:44 +0100

kde4libs (4:4.0.0-2) unstable; urgency=low

  +++ Changes by Fathi Boudra:

  * Update arm patch. Avoid conversion to float. Thanks to Pino Toscano.
  * Move hal and pmount Recommends to kdebase-runtime-bin-kde4 package.
  * Rename kdelibs-dbg to kdelibs5-dbg.