@@ -1,8 +1,13 @@
 kde4libs (4:4.0.1-2) UNRELEASED; urgency=low
 
+  * Don't bump shlibs version automatically on every upload. Bumping on new
+    upstream versions is enough now that the libs are stable.
   * Add versioned shlibs to libphonon4.
   * Remove kde-icons-oxygen and kdebase-runtime-data from the shlibs file of
     kdelibs5. kdebase-runtime depends on them anyway.
+  * Add strict dependency of kdelibs-bin on kdelibs5 and use a more obvious
+    way to remove the dependency on kdebase-runtime. shlibs.local is no more
+    needed now.
 
  -- Armin Berres <trigger+debian@space-based.de>  Tue, 05 Feb 2008 15:14:30 +0100
 
